2009-08-18  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/callbacks.c:
   Fix 'Open Selected File' for unsaved new documents.


2009-08-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/keybindings.c:
   Fix non-working Home and End keys on numpads.


2009-08-17  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * doc/geany.txt:
   Add 'Scope autocompletion' section.
   Add 'Tools menu items' section to explain configuration files
   submenu, reload configuration item.
   Minor updates/fixes.


2009-08-16  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/document.c:
   Add a translation hint to an ambiguous format string.
 * src/Makefile.am:
   Add missing include path to fix 'make distcheck'.
 * src/win32.c:
   Fix opening of local files in the browser on Windows.
 * New release: Geany 0.18 "Kaine".


2009-08-15  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * src/editor.c:
   Temporarily disable reshowing calltips when the autocompletion
   list was closed implicitly by not choosing an item to fix
   problems with wrongly displayed calltips.
 * src/template.c:
   Add missing 'coding' cookie to the Python filetype template.
 * doc/images/pref_dialog_edit_completions.png,
   doc/images/pref_dialog_toolbar.png:
   Update images for Geany 0.18.


2009-08-13  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>

 * wscript:
   Add command '--hackingdoc' to create the HTML form of the
   HACKING file.


2009-08-12  Frank Lanitz  <frank(at)frank(dot)uvena(dot)de>

 * po/pt_PT.po, po/LINGUAS:
   Added a first Portugese (Portugal) translation based on work done at
   launchpad by e.g. André Glória and Alexandre Jesus.
 * src/main.c: Fix a minor typo on --help call.


2009-08-11  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>

 * src/highlighting.c:
   Call get_keyfile_wordchars() in highlighting_init_styles().


2009-08-09  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
