@@ -2,6 +2,9 @@
 
  * src/callbacks.c:
    Fix 'Open Selected File' for unsaved new documents.
+ * src/keybindings.c, src/keybindings.h, src/prefs.c:
+   Fix updating main menu accelerators after changing keybindings
+   (thanks to Lex Trotman).
 
 
 2009-08-18  Enrico Tröger  <enrico(dot)troeger(at)uvena(dot)de>
